# HackatonEnv

./: README.md  pyproject.toml
accelerators/documents_comparer/: Document comparer.ipynb  results1.xlsx  results2.xlsx  results3.xlsx
